[package]
name = "tower_allowed_hosts"
version = "0.4.0"
edition = "2021"
authors = ["Saurav Sharma <appdroiddeveloper@gmail.com>"]
homepage = "https://github.com/iamsauravsharma/tower_allowed_hosts"
repository = "https://github.com/iamsauravsharma/tower_allowed_hosts"
description = "tower allowed hosts layer"
license = "MIT"
readme = "README.MD"

[dependencies]
http = "1.0.0"
pin-project = "1.1.3"
thiserror = "1.0.44"
tower = "0.4.13"
tracing = { version = "0.1.37", default-features = false, features = [
    "std",
], optional = true }

[features]
default = ["tracing"]
tracing = ["dep:tracing"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"
unsafe_code = "deny"

[lints.clippy]
all = "deny"
pedantic = "warn"
