[package]
name = "tower_allowed_hosts"
version = "0.8.0"
edition = "2021"
authors = ["Saurav Sharma <appdroiddeveloper@gmail.com>"]
homepage = "https://github.com/iamsauravsharma/tower_allowed_hosts"
repository = "https://github.com/iamsauravsharma/tower_allowed_hosts"
description = "tower allowed hosts layer"
license = "MIT"
readme = "README.MD"

[dependencies]
http = "1.0.0"
pin-project = "1.1.3"
regex = { version = "1.10.3", optional = true }
thiserror = "1.0.44"
tower-layer = "0.3.3"
tower-service = "0.3.3"
tracing = { version = "0.1.37", default-features = false, features = [
    "std",
], optional = true }
wildmatch = { version = "2.3.0", optional = true }

[dev-dependencies]
bytes = "1.5.0"
http-body-util = "0.1.1"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.0", features = ["util"] }

[features]
default = ["tracing"]
regex = ["dep:regex"]
tracing = ["dep:tracing"]
wildcard = ["dep:wildmatch"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"
unsafe_code = "deny"

[lints.clippy]
all = "deny"
pedantic = "warn"
