[package]
name = "tower_allowed_hosts"
version = "0.10.0"
edition = "2024"
authors = ["Saurav Sharma <appdroiddeveloper@gmail.com>"]
homepage = "https://github.com/iamsauravsharma/tower_allowed_hosts"
repository = "https://github.com/iamsauravsharma/tower_allowed_hosts"
description = "tower allowed hosts layer"
license = "MIT"
readme = "README.MD"

[dependencies]
http = "1.0.0"
pin-project = "1.1.3"
regex = { version = "1.10.3", optional = true }
tower-layer = "0.3.3"
tower-service = "0.3.3"
tracing = { version = "0.1.37", default-features = false, features = [
    "std",
], optional = true }
wildmatch = { version = "2.3.0", optional = true }

[dev-dependencies]
bytes = "1.5.0"
http-body-util = "0.1.1"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.0", features = ["util"] }

[features]
default = ["tracing"]
regex = ["dep:regex"]
tracing = ["dep:tracing"]
wildcard = ["dep:wildmatch"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
ambiguous_negative_literals = "warn"
elided_lifetimes_in_paths = "warn"
meta_variable_misuse = "warn"
missing_docs = "warn"
redundant_imports = "warn"
unreachable_pub = "warn"
unsafe_code = "deny"
unstable_features = "deny"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
allow_attributes = "warn"
dbg_macro = "warn"
exhaustive_enums = "warn"
infinite_loop = "warn"
multiple_inherent_impl = "warn"
panic = "warn"
print_stderr = "warn"
print_stdout = "warn"
redundant_test_prefix = "warn"
tests_outside_test_module = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
unused_trait_names = "warn"
use_debug = "warn"
all = { level = "deny", priority = -1 }
pedantic = "warn"
